--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,6 +1,3 @@
-# Read the Docs configuration file for MkDocs projects
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
 version: 2
 
 # Set the version of Python and other tools you might need
@@ -13,8 +10,13 @@ build:
     - asdf install uv latest
     - asdf global uv latest
     - uv sync --group docs --frozen
-    - NO_COLOR=1 uv run mkdocs build --strict --site-dir
+    - uv run -m sphinx -T -b html -d docs/_build/doctrees -D language=en docs
       $READTHEDOCS_OUTPUT/html
 
-mkdocs:
-  configuration: mkdocs.yml
+sphinx:
+  builder: html
+  configuration: docs/conf.py
+  fail_on_warning: true
+
+# Don't build any extra formats
+formats: []
